--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "react-simple-captcha": "^9.3.1",
+    "react-spinners": "^0.14.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
